# primo-agente

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
src/agentic/: __main__.py  activity_log.py  agent.py  io_utils.py  router.py  tools.py
src/prework_repo.egg-info/: PKG-INFO  SOURCES.txt
src/primo_agente.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agent.py  test_router.py  test_tools.py
